Spacing style fixes

--- a/src/stylesheets/modules/validation_dialog.styl
+++ b/src/stylesheets/modules/validation_dialog.styl
@@ -84,7 +84,7 @@ cf-validation-setting
   .form-inline-error
     display: block
     font-size: 1em;
-    padding-top: 0.8em;
+    padding-top: $rhythm(0.5)
 
   input[type=number]
     width: 6em
@@ -100,7 +100,7 @@ cf-validation-setting
   margin: 0 1em
 
 .validation-controls__error-message-input
-  margin-top: $rhythm(0.5);
+  margin-top: $rhythm(1);
   display: block;
   > input
     display: inline-block;
